--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve src/**/*.html --no-cache",
-    "build": "parcel build src/**/*.html"
+    "build": "parcel build src/**/*.html --public-url /study-website/"
   },
   "devDependencies": {
+    "@parcel/transformer-less": "2.0.0-beta.3.1",
+    "@parcel/transformer-postcss": "^2.0.0-alpha.3",
     "autoprefixer": "^10.3.1",
     "parcel": "^2.0.0-beta.3.1",
+    "postcss": "^8.1.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "posthtml-include": "^1.7.1",
     "posthtml-modules": "^0.7.4",
     "posthtml-shorten": "^1.0.0"
