--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "parcel build src/**/*.html --dist-dir www"
   },
   "devDependencies": {
+    "@parcel/babel-plugin-transform-runtime": "^2.0.0-nightly.1823",
+    "@parcel/babel-preset-env": "^2.0.0-alpha.3",
     "@parcel/transformer-image": "2.0.0-rc.0",
     "@parcel/transformer-less": "2.0.0-rc.0",
     "parcel": "^2.0.0-rc.0",
